--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <p>CSS Local Style 1</p>
 <p style="font-size:20pt;color:blue">CSS Local Style 2</p>
 <p style="font-size:40pt;color:red;">CSS Local Style 3</p>
+<a href="https://x-ara.github.io/test.html">My Link</a>
 </body>
 </html>
 
