--- a/test.html
+++ b/test.html
@@ -1,6 +1,19 @@
+<html>
 <head>
-	<script type="text/javascript" src="clock.js"></script>
+<style type="text/css">
+h1 {
+	font-size:20pt
+}
+h2 {
+	font-size:40pt;
+	color:#0000FF
+}
+</style>
+<title>Global Style</title>
 </head>
 <body>
-	<canvas id="canvas" width="300" height="300"></canvas>
+<p>CSS Global Style 1</p>
+<h1>CSS Global style 2</h1>
+<h2>CSS Global style 3</h2>
 </body>
+</html>
