--- a/test.html
+++ b/test.html
@@ -1,19 +1,6 @@
-<html>
-<head>
-<style type="text/css">
-h1 {
-	font-size:20pt
-}
-h2 {
-	font-size:40pt;
-	color:#0000FF
-}
-</style>
-<title>Global Style</title>
-</head>
-<body>
-<p>CSS Global Style 1</p>
-<h1>CSS Global style 2</h1>
-<h2>CSS Global style 3</h2>
-</body>
-</html>
+<h1> This is demo of bullet list</h1>
+<h2>Bullet List</h2>
+<ul>
+<li> Be Happy </li>
+<li> Similing Everyday </li>
+</ul>
